# tensornext

./: README.md  setup.sh
.github/workflows/: python-app.yml  step1-e2e.yml
ai-runtime/: .env.example  Makefile  README.md  pyproject.toml
ai-runtime/.github/workflows/: step1-e2e.yml
ai-runtime/client/cli/: submit_job.py
ai-runtime/client/sdk/: client.py
ai-runtime/docs/: failure_modes.md  roadmap.md  step1_complete.md
ai-runtime/gateway/: __main__.py
ai-runtime/gateway/app/: main.py
ai-runtime/gateway/app/api/: health.py  infer.py  metrics.py  register.py
ai-runtime/gateway/app/core/: auth.py  circuit_breaker.py  config.py  metrics.py  observability.py  rate_limit.py  registry.py  router.py
ai-runtime/gateway/tests/: test_auth.py  test_failures.py  test_gateway.py  test_integration.py  test_rate_limiting.py  test_registry.py  test_router.py  test_streaming.py
ai-runtime/scripts/: smoke_test.py
ai-runtime/server/app/: main.py
ai-runtime/server/app/api/: health.py  infer.py
ai-runtime/server/app/core/: batcher.py  config.py  logging.py  pipeline.py  queue.py  registry_client.py  scheduler.py  worker.py
ai-runtime/server/app/models/: loader.py
ai-runtime/server/app/schemas/: inference.py
ai-runtime/server/tests/: test_batcher.py  test_concurrency.py  test_queue.py  test_registry_client.py  test_scheduler.py
ai-runtime/shared/schemas/: inference.py
server/: server.py
